--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>QuranWBW.com</title>
+		<title>AL-QURAN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="theme-color" content="#ffffff" />
@@ -81,14 +81,7 @@
 		credits: https://stackoverflow.com/a/69935847 
 		caniuse: https://caniuse.com/mdn-javascript_operators_optional_chaining
 		-->
-		<script>
-			try {
-				eval('const foo = {}; foo?.bar');
-			} catch {
-				alert('Important Note: QuranWBW.com has recently been updated. Unfortunately, your current browser version is not compatible with the latest update. We recommend updating your browser to the latest version and trying again. To ensure a seamless experience, you will be redirected to the previous version once you close this alert.');
-				window.location.replace('https://old.quranwbw.com');
-			}
-		</script>
+		
 
 		<!-- Themes related stuff... putting all this here to ensure there is no white-flash -->
 		<script>
